# med-fraud-systerm

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  WRITEUP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
artifacts/: evaluation_metrics.json  training_summary.json
dagster_project/: __init__.py  assets.py  definitions.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: ratio_vs_benchmark.sql  safe_zscore.sql
dbt/models/: sources.yml
dbt/models/marts/: mart_provider_features.sql  marts.yml
dbt/models/staging/: staging.yml  stg_leie_exclusions.sql  stg_nppes_providers.sql  stg_partb_claims.sql  stg_provider_exclusion_labels.sql
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: adr-001-orchestration-dagster.md  adr-002-storage-duckdb.md  adr-003-transformations-dbt.md  adr-004-modeling-layered-approach.md  adr-005-evaluation-metrics.md  deployment-guide.md  generate_pdf.py  labeling-methodology.md  loom-script.md
src/cms_fwa/: __init__.py  config.py
src/cms_fwa/dagster_defs/: __init__.py
src/cms_fwa/features/: __init__.py  base.py  divergence.py  geographic.py  mahalanobis.py  pipeline.py  velocity.py
src/cms_fwa/ingestion/: __init__.py  downloaders.py  leie_audit.py  leie_matcher.py  loaders.py  run.py  sources.py  validators.py
src/cms_fwa/models/: __init__.py  data_prep.py  diagnose.py  ensemble.py  evaluation.py  explainability.py  graph_model.py  isolation_forest.py  sanity_check.py  train.py  xgboost_model.py
src/cms_fwa/serving/: __init__.py  api.py  dashboard.py
src/cms_fwa/transformations/: __init__.py
src/cms_fwa/utils/: __init__.py  db.py  logging.py
tests/unit/: test_api.py  test_config.py  test_divergence.py  test_ensemble.py  test_evaluation.py  test_explainability.py  test_geographic.py  test_loaders.py  test_mahalanobis.py  test_sources.py  test_validators.py  test_velocity.py
