[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cms-fwa-detection"
version = "0.1.0"
description = "Medicare Provider Fraud, Waste, and Abuse detection using ML and industrial engineering principles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    # --- Data & Storage ---
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",

    # --- Orchestration ---
    "dagster>=1.8.0",
    "dagster-webserver>=1.8.0",
    "dagster-duckdb>=0.24.0",

    # --- Transformations ---
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",

    # --- ML ---
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "shap>=0.46.0",
    "imbalanced-learn>=0.12.0",

    # --- Graph ---
    "networkx>=3.3",
    "torch>=2.4.0",
    "torch-geometric>=2.6.0",

    # --- Serving ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.39.0",

    # --- Data Quality ---
    "great-expectations>=1.1.0",

    # --- Utilities ---
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.7.0",
    "black>=24.8.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.isort]
known-first-party = ["cms_fwa"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "dagster.*",
    "great_expectations.*",
    "shap.*",
    "torch_geometric.*",
    "xgboost.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/cms_fwa"]
